@@ -1,3 +1,13 @@
+Thu Jan  7 11:34:14 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* include/ruby/backward.h (ruby_show_copyright_to_die): for source
+	  code backward compatibility.
+
+	* ruby.c (process_options): return Qtrue to exit the process
+	  successfully.
+
+	* version.c (ruby_show_copyright): no longer exit.
+
 Wed Jan  6 17:22:53 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>
 
 	* lib/optparse.rb (OptionParser#order!): add `into` optional
